--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.0.3",
+    "bootstrap-icons": "^1.11.1",
+    "font-awesome-sass": "^4.7.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.2",
     "prop-types": "^15.8.1",
